[UI/UX:InstructorUI] Fix Invalid Contrast on Admin Gradeable (#6500)

--- a/site/public/css/admin-gradeable.css
+++ b/site/public/css/admin-gradeable.css
@@ -18,6 +18,18 @@ input.readonly.peerstudents {
     width: 200px;
 }
 
+input[type=text]:invalid {
+    background-color: var(--alert-invalid-entry-pink);
+}
+
+[data-theme="dark"] input[type=text]:invalid {
+    background-color: var(--alert-danger-red);
+}
+
+[data-theme="dark"] input[type=text]:invalid::placeholder {
+    color: var(--alert-invalid-entry-pink);
+}
+
 select {
     margin-top:7px;
     width: -webkit-fill-available;
